--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,24 @@
 
         <input type="submit" value="Registrar Cliente">
     </form>
+
+<!-- Tabla para mostrar los últimos 10 usuarios registrados -->
+    <table id="lastTenClients">
+        <caption>Últimos 10 clientes registrados</caption>
+        <thead>
+        <tr>
+            <th>DNI</th>
+            <th>Nombres</th>
+            <th>Apellidos</th>
+            <!-- ... Otros encabezados de columna ... -->
+        </tr>
+        </thead>
+        <tbody>
+        <!-- Los datos se llenarán aquí dinámicamente -->
+        </tbody>
+    </table>
+  
+    
 <script src="./script.js"></script>
 </body>
 </html>
