--- a/public/index.html
+++ b/public/index.html
@@ -74,23 +74,38 @@
                 </form>
             </div>
             <br>
-            <div class="table-clients">
-				<h1>Clientes Registrados</h1><br>
-                <table  id="lastTenClients">
-                    <caption>Últimos 10 clientes registrados</caption>
-                    <thead>
-                        <tr>
-                            <th>DNI</th>
-                            <th>Nombres</th>
-                            <th>Apellidos</th>
-                            
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!-- Los datos se llenarán aquí dinámicamente -->
-                    </tbody>
-                </table>
-            </div>
+            <div class="accordion" id="accordionExample">
+
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      Ver más
+                    </button>
+                  </h2>
+                  <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <div class="table-clients">
+                            <h1>Clientes Registrados</h1><br>
+                            <table  id="lastTenClients">
+                                <caption>Últimos 10 clientes registrados</caption>
+                                <thead>
+                                    <tr>
+                                        <th>DNI</th>
+                                        <th>Nombres</th>
+                                        <th>Apellidos</th>
+                                        
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <!-- Los datos se llenarán aquí dinámicamente -->
+                                </tbody>
+                            </table>
+                        </div>            
+                    </div>
+                  </div>
+                </div>
+
+              </div>
 
             <div class="container row d-flex align-items-center justify-content-center mb-5" style="margin-left: auto; margin-right: auto;">
                 <div class="col-lg-6 col-md-12 proteger-invenciones">
